[gd_scene load_steps=14 format=2]

[ext_resource path="res://main/res/fonts/roboto/Roboto-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://main/res/fonts/roboto/Roboto-Black.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://main/res/richtexteffects/jump.tres" type="RichTextEffect" id=3]
[ext_resource path="res://main/res/icons/camera_alt-24px.svg" type="Texture" id=4]
[ext_resource path="res://main/res/shaders/round_avatar.tres" type="Material" id=5]
[ext_resource path="res://firebase-ui/auth/sign_container/sign_container.tscn" type="PackedScene" id=6]
[ext_resource path="res://main/scn/signin/signin.gd" type="Script" id=7]
[ext_resource path="res://main/res/imgs/avatar.svg" type="Texture" id=8]
[ext_resource path="res://main/scn/buttons/firebase_btn/button.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 49
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 15.0
content_margin_right = 15.0
content_margin_top = 15.0
content_margin_bottom = 15.0
bg_color = Color( 1, 0.886275, 0.639216, 0 )

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0.25098, 0.356863, 0.768627, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 20
shadow_color = Color( 0, 0, 0, 0.176471 )
shadow_size = 3
shadow_offset = Vector2( 0, 1 )

[node name="SignIn" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SignContainer" type="PanelContainer" parent="."]
margin_left = 338.0
margin_top = 100.0
margin_right = 686.0
margin_bottom = 500.0
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="SignContainer"]
margin_left = 14.0
margin_top = 14.0
margin_right = 334.0
margin_bottom = 386.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="SignContainer/VBoxContainer"]
margin_right = 320.0
margin_bottom = 96.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="SignContainer/VBoxContainer/VBoxContainer"]
margin_right = 320.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0.432587, 0.449886, 0.878906, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Welcome to"
align = 1

[node name="Label2" type="RichTextLabel" parent="SignContainer/VBoxContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 320.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 60 )
rect_clip_content = false
custom_fonts/normal_font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0.341176, 0.356863, 0.811765, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
bbcode_enabled = true
bbcode_text = "[jump][center]socia.dot[/center][/jump]"
meta_underlined = false
text = "socia.dot"
scroll_active = false
custom_effects = [ ExtResource( 3 ) ]

[node name="SignContainer" parent="SignContainer/VBoxContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 116.0
margin_right = 320.0
margin_bottom = 372.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 3 )

[node name="UpdateProfile" type="PanelContainer" parent="."]
margin_left = 377.0
margin_top = 133.0
margin_right = 647.0
margin_bottom = 466.0
rect_min_size = Vector2( 270, 0 )
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="UpdateProfile"]
margin_left = 14.0
margin_top = 14.0
margin_right = 256.0
margin_bottom = 319.0
custom_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="UpdateProfile/VBox"]
margin_right = 242.0
margin_bottom = 25.0
text = "Update your profile"
align = 1

[node name="UpdatePicture" type="TextureRect" parent="UpdateProfile/VBox"]
material = ExtResource( 5 )
margin_left = 56.0
margin_top = 45.0
margin_right = 186.0
margin_bottom = 175.0
rect_min_size = Vector2( 130, 130 )
size_flags_horizontal = 4
texture = ExtResource( 8 )
expand = true
stretch_mode = 1

[node name="CameraIcon" type="Button" parent="UpdateProfile/VBox/UpdatePicture"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -40.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
icon = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateUsername" type="LineEdit" parent="UpdateProfile/VBox"]
margin_top = 195.0
margin_right = 242.0
margin_bottom = 240.0
align = 1
placeholder_text = "username"
caret_blink = true
caret_blink_speed = 0.5

[node name="ConfirmBtn" parent="UpdateProfile/VBox" instance=ExtResource( 9 )]
margin_left = 69.0
margin_top = 260.0
margin_right = 173.0
margin_bottom = 305.0
size_flags_horizontal = 4
size_flags_vertical = 10
text = "Confirm"

[node name="ChosePicture" type="FileDialog" parent="."]
margin_left = 212.0
margin_top = 150.0
margin_right = 812.0
margin_bottom = 450.0
rect_min_size = Vector2( 600, 300 )
window_title = "Open a File"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.png", "*.jpg" )
show_hidden_files = true
current_dir = "/COMPUTER/GodotEngine/GDScript/FirebaseDemo"
current_path = "/COMPUTER/GodotEngine/GDScript/FirebaseDemo/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
